# ft_wl_fwk

./: README.en.md  README.md  runFT_wayland.sh
event_loop/: BUILD.gn
event_loop/includes/: current_thread.h  log.h  noncopyable_hal.h  timestamp.h  types.h
event_loop/includes/event_loop/: event_channel.h  event_loop.h  event_loop_thread.h  event_poller.h  timer.h  timer_queue.h
event_loop/src/: current_thread.cpp  timestamp.cpp
event_loop/src/event_loop/: event_channel.cpp  event_loop.cpp  event_loop_thread.cpp  event_poller.cpp  timer.cpp  timer_queue.cpp
wayland_adapter/: BUILD.gn  config.gni  wayland_server.cpp  wayland_server.h
wayland_adapter/framework/: BUILD.gn
wayland_adapter/framework/core/: wayland_compositor.cpp  wayland_data_device.h  wayland_data_offer.h  wayland_data_source.h  wayland_keyboard.cpp  wayland_keyboard.h  wayland_output.cpp  wayland_region.cpp  wayland_region.h  wayland_seat.cpp  wayland_seat.h  wayland_subcompositor.cpp  wayland_subsurface.cpp  wayland_surface.cpp  wayland_surface.h
wayland_adapter/framework/stable/: wayland_xdg_popup.cpp  wayland_xdg_popup.h  wayland_xdg_positioner.cpp  wayland_xdg_positioner.h  wayland_xdg_surface.cpp  wayland_xdg_surface.h  wayland_xdg_toplevel.cpp  wayland_xdg_toplevel.h
wayland_adapter/framework/unstable/: wayland_zwp_linux_dmabuf.cpp  wayland_zwp_linux_dmabuf.h
wayland_adapter/test/: BUILD.gn  wayland_demo.cpp
wayland_adapter/utils/: BUILD.gn
wayland_adapter/utils/include/: wayland_resource_object.h  wayland_utils.h
wayland_adapter/utils/src/: wayland_keycode_trans.cpp
wayland_adapter/wayland_protocols/: BUILD.gn
wayland_adapter/wayland_protocols/unstable/: linux-dmabuf-unstable-v1-client-protocol.h  linux-dmabuf-unstable-v1-server-protocol.h
